<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rbHomme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferencesActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="387dp"
        android:layout_height="34dp"
        android:text="@string/nomUtilisateur"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="386dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="118dp"
        android:layout_height="78dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43">

        <RadioButton
            android:id="@+id/rbHomme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbHomme" />

        <RadioButton
            android:id="@+id/rbFemme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbFemme" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSauvegarder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickBtnSauvegarder"
        android:text="@string/btnSauvegarder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643" />
</androidx.constraintlayout.widget.ConstraintLayout>